backend/broPayCRM/force-app/main/default/objects/Expense_Split__c/Expense_Split__c.object-meta.xml
<CustomObject>
    <label>Expense Split</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Expense Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>