backend/broPayCRM/force-app/main/default/objects/Expense_Split__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Expense Splits</relationshipLabel>
    <relationshipName>Expense_Splits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>