backend/broPayCRM/force-app/main/default/objects/Expense_Split__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is responsible for payment?</description>
    <label>Participant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expense_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>