backend/broPayCRM/force-app/main/default/objects/Expense_Split__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <description>How much % this person owes</description>
    <label>Share %</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>